Fix font 6 size overflow

--- a/style.css
+++ b/style.css
@@ -148,13 +148,13 @@ img {
 }
 
 .fontsize5 {
-  font-size: 16px;
-  line-height: 1.18;
+  font-size: 18px;
+  line-height: 19px;
 }
 
 .fontsize6 {
-  font-size: 14px;
-  line-height: 1.13;
+  font-size: 16px;
+  line-height: 14px;
 }
 
 .fontsize7 {
